Updated: with correct alignmnet

--- a/src/components/DataDisplay/DataDisplay.css
+++ b/src/components/DataDisplay/DataDisplay.css
@@ -1,27 +1,29 @@
+/* DataDisplay.css */
+
+/* Container for the data */
 .flexbox-container {
     display: flex;
-    flex-wrap: wrap;
-
-    
   }
   
-  .flexbox-row {
-    display: flex;
-    width: 100%; /* Ensure each row spans the full width */
-    margin-bottom: 10px; /* Add some spacing between rows */
-    justify-content: center;
-  }
-  
-  .column {
-     /* Each column takes up equal width within a row */
-    padding: 5px;
-    margin: 5px;
-    box-sizing: border-box;
-    font-size: 16px;
-  }
-
-  .attribute, .colon{
+  /* Style for the attribute name */
+  .attribute {
+    flex: 1;
+    text-align: left;
+    padding: 10px;
     font-weight: bold;
-    text-transform: uppercase;
+  }
+  
+  /* Style for the colon separator */
+  .colon {
+    flex: 1;
+    text-align: center;
+    padding: 10px;
+    font-weight: bold;
+  }
+  
+  /* Style for the data type */
+  .item {
+    flex: 1;
+    padding: 10px;
   }
   
